@@ -128,24 +128,7 @@ else {
 			foreach($custom as $field) {
 				if(!in_array($field['name'], $hidden_custom_fields)) {
 					print "<td class='hidden-xs hidden-sm hidden-md'>";
-
-					// create links
-					$device[$field['name']] = $Result->create_links ($device[$field['name']], $field['type']);
-
-					//booleans
-					if($field['type']=="tinyint(1)")	{
-						if($device[$field['name']] == "0")		{ print _("No"); }
-						elseif($device[$field['name']] == "1")	{ print _("Yes"); }
-					}
-					//text
-					elseif($field['type']=="text") {
-						if(strlen($device[$field['name']])>0)	{ print "<i class='fa fa-gray fa-comment' rel='tooltip' data-container='body' data-html='true' title='".str_replace("\n", "<br>", $device[$field['name']])."'>"; }
-						else											{ print ""; }
-					}
-					else {
-						print $device[$field['name']];
-
-					}
+					$Tools->print_custom_field ($field['type'], $device[$field['name']]);
 					print "</td>";
 				}
 			}
